Archive2/7f/80b40529b9afbb/output
main.cpp:2:1: error: use of undeclared identifier 'std'
std::string to_string <gui_ntf_t>(const gui_ntf_t& ntf)
^
main.cpp:1:1: error: extraneous 'template<>' in declaration of variable 'to_string'
template <>
^~~~~~~~~~~
main.cpp:2:22: error: expected ';' at end of declaration
std::string to_string <gui_ntf_t>(const gui_ntf_t& ntf)
                     ^
                     ;
main.cpp:2:23: error: expected unqualified-id
std::string to_string <gui_ntf_t>(const gui_ntf_t& ntf)
                      ^
main.cpp:13:1: error: use of undeclared identifier 'std'
std::string to_string(const T& data)
^
main.cpp:15:5: error: use of undeclared identifier 'std'
    std::stringstream ss;
    ^
6 errors generated.
